testdata/baselines/reference/submodule/compiler/fileReferencesWithNoExtensions.errors.txt
t.ts(1,22): error TS6053: File 'a' not found.
t.ts(2,22): error TS6053: File 'b' not found.
t.ts(3,22): error TS6053: File 'c' not found.


==== t.ts (3 errors) ====
    /// <reference path="a"/>
                         ~
!!! error TS6053: File 'a' not found.
    /// <reference path="b"/>
                         ~
!!! error TS6053: File 'b' not found.
    /// <reference path="c"/>
                         ~
!!! error TS6053: File 'c' not found.
    var a = aa;  // Check that a.ts is referenced
    var b = bb;  // Check that b.d.ts is referenced
    var c = cc;  // Check that c.ts has precedence over c.d.ts
    
==== a.ts (0 errors) ====
    var aa = 1;
    
==== b.d.ts (0 errors) ====
    declare var bb: number;
    
==== c.ts (0 errors) ====
    var cc = 1;
    
==== c.d.ts (0 errors) ====
    declare var xx: number;
    